--- a/CSlns.DiscriminatedUnions/CSlns.DiscriminatedUnions.csproj
+++ b/CSlns.DiscriminatedUnions/CSlns.DiscriminatedUnions.csproj
@@ -10,6 +10,7 @@
         <Authors>dmitryartm</Authors>
         <Copyright>2022</Copyright>
         <Version>1.3.1</Version>
+        <RepositoryUrl>https://github.com/dmitryartm/CSlns.DiscriminatedUnions</RepositoryUrl>
         <NoWarn>$(NoWarn);NU5128</NoWarn>
     </PropertyGroup>
 
