--- a/CSharpDiscriminatedUnions.Runtime/CSharpDiscriminatedUnions.Runtime.csproj
+++ b/CSharpDiscriminatedUnions.Runtime/CSharpDiscriminatedUnions.Runtime.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>10</LangVersion>
-        <RootNamespace>CSlns.DiscriminatedUnions</RootNamespace>
+        <RootNamespace>CSharpDiscriminatedUnions</RootNamespace>
         <IsPackable>False</IsPackable>
     </PropertyGroup>
 
